--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,16 @@
     <dependencies>
         <dependency>
             <!-- For evaluating mathematical expressions for counting bot -->
-            <groupId>net.objecthunter</groupId>
-            <artifactId>exp4j</artifactId>
-            <version>0.4.8</version>
+            <groupId>com.ezylang</groupId>
+            <artifactId>EvalEx</artifactId>
+            <version>3.2.0</version>
         </dependency>
-
+        <dependency>
+            <!-- For evaluating mathematical expressions for counting bot -->
+            <groupId>com.ezylang</groupId>
+            <artifactId>EvalEx-big-math</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
